implement setting form

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -16,6 +16,7 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- Add your extensions here -->
+        <applicationConfigurable groupId="tools" displayName="Buildkite Plugin" id="buildkite.settings" instance="SettingsConfigurable" />
     </extensions>
 
     <actions>
