--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation 'com.squareup.retrofit2:converter-jackson:2.6.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
